--- a/src/app/standrdpricereport/standrdpricereport.component.html
+++ b/src/app/standrdpricereport/standrdpricereport.component.html
@@ -1,1 +1,11 @@
-<p>standrdpricereport works!</p>
+<table mat-table [dataSource]="standardPriceList">
+    
+    <ng-container matColumnDef="Inventory Number">
+        <th mat-header-cell *matHeaderCellDef> Inventory Number </th>
+        <td mat-cell *matCellDef="let data"> {{data.inventoryNumber}} </td>
+      </ng-container>
+
+      
+   <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+  <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+  </table>
