--- a/src/app/standrdpricereport/standrdpricereport.component.html
+++ b/src/app/standrdpricereport/standrdpricereport.component.html
@@ -5,7 +5,55 @@
         <td mat-cell *matCellDef="let data"> {{data.inventoryNumber}} </td>
       </ng-container>
 
+      <ng-container matColumnDef="conditionsAndOptions">
+        <th mat-header-cell *matHeaderCellDef> Conditions And Options </th>
+        <td mat-cell *matCellDef="let data"> {{data.conditionsAndOptions}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef> price </th>
+        <td mat-cell *matCellDef="let data"> {{data.price}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="createdDate">
+        <th mat-header-cell *matHeaderCellDef> Created Date </th>
+        <td mat-cell *matCellDef="let data"> {{data.createdDate}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="edenName">
+        <th mat-header-cell *matHeaderCellDef> Eden Name </th>
+        <td mat-cell *matCellDef="let data"> {{data.edenName}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="inventoryId">
+        <th mat-header-cell *matHeaderCellDef> RO# </th>
+        <td mat-cell *matCellDef="let data"> {{data.inventoryId}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="mileage">
+        <th mat-header-cell *matHeaderCellDef> mileage </th>
+        <td mat-cell *matCellDef="let data"> {{data.mileage}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="modelName">
+        <th mat-header-cell *matHeaderCellDef> Model Name </th>
+        <td mat-cell *matCellDef="let data"> {{data.modelName}} </td>
+      </ng-container>
       
+      <ng-container matColumnDef="modelYear">
+        <th mat-header-cell *matHeaderCellDef> Model Year </th>
+        <td mat-cell *matCellDef="let data"> {{data.modelYear}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="AcquiredDate">
+        <th mat-header-cell *matHeaderCellDef> Acquired Date </th>
+        <td mat-cell *matCellDef="let data"> {{data.acquiredDate}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="acquiredAge">
+        <th mat-header-cell *matHeaderCellDef> Acquired Age </th>
+        <td mat-cell *matCellDef="let data"> {{data.acquiredAge}} </td>
+      </ng-container>
    <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
   <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
   </table>
